add_executable(sample_apollo_base sample_apollo_base.cpp)
target_link_libraries(sample_apollo_base PUBLIC apollo_cpp)


add_executable(sample_apollo_openapi sample_apollo_openapi.cpp)
target_link_libraries(sample_apollo_openapi PUBLIC apollo_cpp)


add_executable(sample_apollo_openapi_client sample_apollo_openapi_client.cpp)
target_link_libraries(sample_apollo_openapi_client PUBLIC apollo_cpp)

add_executable(sample_AppConfig sample_AppConfig.cpp)
target_link_libraries(sample_AppConfig PUBLIC apollo_cpp)

add_executable(sample_xmlrpcvalue sample_xmlrpcvalue.cpp)
target_link_libraries(sample_xmlrpcvalue PUBLIC apollo_cpp)