add_executable(sample_apollo_openapi sample_apollo_openapi.cpp)
target_link_libraries(sample_apollo_openapi PUBLIC apollo_cpp)


add_executable(sample_apollo_openapi_client sample_apollo_openapi_client.cpp)
target_link_libraries(sample_apollo_openapi_client PUBLIC apollo_cpp)

add_executable(sample_AppConfig sample_AppConfig.cpp)
target_link_libraries(sample_AppConfig PUBLIC apollo_cpp)

add_executable(sample_xmlrpcvalue sample_xmlrpcvalue.cpp)
target_link_libraries(sample_xmlrpcvalue PUBLIC apollo_cpp)

add_executable(sample_openapi_base sample_openapi_base.cpp)
target_link_libraries(sample_openapi_base PUBLIC apollo_cpp)


find_package(gflags REQUIRED)
add_executable(apollo_cli sample_cli_base.cpp)
target_link_libraries(apollo_cli PUBLIC apollo_cpp gflags)


add_executable(sample_add_config sample_add_config.cpp)
target_link_libraries(sample_add_config PUBLIC apollo_cpp)